limpieza codigo